--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,13 +241,13 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
+  background: url("../img/hero3.jpg") top center;
+  background-size: cover ;
 }
 
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.3);
+  background: rgba(5, 13, 24, 0.2);
   position: absolute;
   bottom: 0;
   top: 0;
