--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,13 +241,21 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero4.jpg") top center;
-  background-size: cover ;
+  background: url("../img/cover.jpg") top center;
+  background-size: cover;
 }
+
+/* Media query for small mobile devices */
+@media (max-width: 600px) {
+  #hero {
+    background: url("../img/hero-bg2.jpg") top center;
+    background-size: cover;
+  }
+}}
 
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.2);
+  background: rgba(5, 13, 24, 0.3);
   position: absolute;
   bottom: 0;
   top: 0;
